2016-03-19  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (search_init): Always remember the last typed string,
	also when it's an invalid regex.  This fixes Savannah bug #47440.
	* src/search.c (search_init, do_replace): Don't bother setting the
	current answer to the empty string, as do_prompt() can handle a NULL.
	* src/browser.c (do_browser): Delete a snippet of dead code.
	* src/browser.c (do_browser): Delete an unneeded variable.
	* src/search.c (do_gotolinecolumn): Delete another unneeded variable.
	* src/search.c (search_init): Snip an always-FALSE condition.
	* src/search.c (search_init): Reshuffle stuff to reduce indentation.
	* src/search.c (do_replace): Snip a useless setting of answer.

2016-03-17  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (do_research): Use the Search key bindings also during
	a Re-search, to enable cancelling.  This fixes Savannah bug #47159.
	* src/search.c (do_replace): Remove two redundant returns.
	* src/search.c (findnextstr): Prune two #ifdefs.
	* src/search.c: Adjust some indentation.

2016-03-14  Benno Schulenberg  <bensberg@justemail.net>
	* src/color.c (color_update): Don't dereference a possible NULL.
	* src/rcfile.c (parse_colors): Make error message equal to others.
	* src/rcfile.c (parse_rcfile): Rearrange some things to reduce the
	indentation level by four steps, so we can unwrap a dozen lines.

2016-03-13  Benno Schulenberg  <bensberg@justemail.net>
	* src/search.c (regexp_init): Allow using the word boundary markers
	\< and \> in search strings on non-GNU systems.  This is a partial
	fix for Savannah bug #47325 reported by Thomas Rosenau.
	* src/rcfile.c (parse_rcfile, parse_colors, nregcomp): Combine the
	regular-expression flags at compile time instead of at run time.
	* src/rcfile.c (parse_syntax, parse_colors): Rename a variable.
	* src/winio.c (edit_draw): Give a central variable a ringing name.

2016-03-13  Thomas Rosenau  <thomasr@fantasymail.de>  (tiny change)